# labs-contracts

./: .gas-snapshot  .gitignore  .gitmodules  README.md  foundry.toml  mypy.ini  pyproject.toml  remappings.txt
.github/workflows/: foundry_ci.yml  graphs_ci.yml  python_ci.yaml
abi/: omen_thumbnailmapping.abi.json
flattened/: BetYesFlattened.sol
graphs/envio-subgraphs/: config.yaml  package.json  pnpm-lock.yaml  schema.graphql
graphs/omen-agentresultmapping/: networks.json  package.json  schema.graphql  subgraph.yaml
graphs/omen-thumbnailmapping/: .gitignore  networks.json  package-lock.json  package.json  schema.graphql  subgraph.yaml  tsconfig.json
interfaces/: IERC20.sol
script/: OmenThumbnailMapping.s.sol  SetupTrustRelationships.s.sol
scripts/: copy_existing_image_mapping.py
src/: AgentResultMapping.sol  OmenAgentResultMapping.sol  OmenThumbnailMapping.sol  structs.sol
src/NFT/: AgentCommunication.sol  AgentNFT.sol  DoubleEndedStructQueue.sol  SimpleTreasury.sol
src/adhoc/: DebuggingContract.sol
src/crc_prediction_markets/: BetContract.sol  BetContractFactory.sol  BetYes.sol  CTHelpers.sol  IConditionalTokens.sol  IFixedProductMarketMaker.sol  LiquidityAdder.sol  LiquidityContractFactory.sol  LiquidityRemover.sol  LiquidityVaultToken.sol  README.md
test/: AgentCommunication.t.sol  AgentNFT.t.sol  AgentResultMapping.t.sol  BetContract.t.sol  BetContractFactory.t.sol  BetYes.t.sol  ERC1155REceiver.t.sol  LiquidityAdder.t.sol  OmenAgentResultMapping.t.sol  OmenThumbnailMapping.t.sol  SimpleTreasury.t.sol  Utils.sol
test/mocks/: MockERC20.sol  (+4 more)
(+29 files in other folders)
