[tool.poetry]
name = "labs-contracts"
version = "0.1.0"
description = ""
authors = ["Gnosis Labs <ai@gnosis.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.0"
prediction-market-agent-tooling = "^0.39.3"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "^1.9.0"
black = "^23.12.1"
isort = "^5.13.2"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
